--- a/exercices01.ipynb
+++ b/exercices01.ipynb
@@ -481,15 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Votre phrase :\n",
-      "Code cesar : \n"
+      "Votre phrase :AZERTY\n",
+      "Code cesar : BAFSUZ\n"
      ]
     }
    ],
@@ -500,7 +500,10 @@
     "code_cesar = \"\"\n",
     "\n",
     "for car in phrase:\n",
-    "    code_cesar += chr( ord(car) + 1 )\n",
+    "    if car == 'Z':\n",
+    "        code_cesar += 'A'\n",
+    "    else:\n",
+    "        code_cesar += chr( ord(car) + 1 )\n",
     "\n",
     "print( \"Code cesar :\", code_cesar )"
    ]
