--- a/csv_sql.ipynb
+++ b/csv_sql.ipynb
@@ -10,11 +10,11 @@
     "\n",
     "Le format de fichier CSV sert le plus souvent à représenter des tableaux de données. Ces formats sont souvent utilisés par les tableurs ( excel, libre office, google doc... ), par les bases de données et par de nombreux logiciels. Ce format de données étant très répandu, on le trouve très souvent en entrée ou en sortie d'une application.\n",
     "Il n'existe pas de standard pour les fichiers CSV, et la connaissance de plusieurs caratéristiques sont utiles pour pouvoir lire ces fichiers:\n",
-    "- Le/les caractères de fin de ligne ( LF ou CR-LF )\n",
+    "- Le/les caractères de fin de ligne ( LF '\\n' ou CR-LF ou '\\r\\n' )\n",
     "- Le caractères séparateur de champ ( , ; ou parfois | )\n",
     "- Le délimiteurs de chaines de caractères ( \" ' ou aucun )\n",
-    "- L'encodage des caractères ( UTF-8, ASCII, ISO8859-1, ... )\n",
-    "- Le caractère spéarateur de décimales ( , . ) ou le séparateur de millier si il existe\n",
+    "- L'encodage des caractères ( UTF-8, ASCII, ISO8859-1, latin1, ANSI, ... )\n",
+    "- Le caractère séparateur de décimales ( , . ) ou le séparateur de millier si il existe\n",
     "- etc ....\n",
     "\n",
     "Documentation python: https://docs.python.org/fr/3/library/csv.html"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +191,15 @@
     "# Lit tout\n",
     "import csv\n",
     "\n",
+    "# ouverture du fichier\n",
     "with open('departement.csv', encoding=\"utf8\") as fichier_csv:\n",
     "    lecteur_csv = csv.reader(fichier_csv, delimiter=',')\n",
     "    \n",
     "    nombre_lignes = 0\n",
     "    # Lire les lignes du fichier une par une\n",
     "    for ligne in lecteur_csv:\n",
+    "        #print(ligne, type(ligne) )\n",
+    "        \n",
     "        # Les champs sont lus dans une liste\n",
     "        print(ligne[0],ligne[1],ligne[2],ligne[3],ligne[4],ligne[5])\n",
     "        nombre_lignes += 1\n",
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +243,7 @@
     "with open('departement.csv', encoding=\"utf8\") as fichier_csv:\n",
     "    lecteur_csv = csv.reader(fichier_csv, delimiter=',', quotechar='\"')\n",
     "\n",
+    "    # w -> write - ouverture en mode écriture\n",
     "    with open('dom_tom.csv', 'w', newline='') as fichier_csv_sortie:\n",
     "        enregistreur_csv = csv.writer(fichier_csv_sortie)\n",
     "    \n",
@@ -255,7 +259,7 @@
    "metadata": {},
    "source": [
     "## 2 - Les bases de données SQL\n",
-    "Pour simplifier la configuration nous allons utiliser la base de données SQLlite qui est directement intégrée dans Python et ne demande pas l'instalation d'un serveur de base de données. Le fonctionnement est le même avec une base de données comme MySQL. Le langage SQL dispose de plusieures variantes qui diffèrent principalement par les options disponibles.\n",
+    "Pour simplifier la configuration nous allons utiliser la base de données SQLlite qui est directement intégrée dans Python et ne demande pas l'instalation d'un serveur de base de données. Le fonctionnement est le même avec une autre base de données. Il existe d'autres types de bases de données: MySQL, PostgresQL, Microsoft SQL Server, Oracle, access... Le langage SQL dispose de plusieurs variantes qui diffèrent principalement par les options disponibles.\n",
     "\n",
     "Le langage SQL dispose de 4 types de commandes:\n",
     "- Les instructions de manipulation de données: INSERT, UPDATE, DELETE, SELECT\n",
@@ -276,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base de données crée\n"
+      "Base de données crée avec succès\n"
      ]
     }
    ],
@@ -293,7 +297,6 @@
     "\n",
     "connexion_bdd = sqlite3.connect('mabasededonnees.db')\n",
     "curseur = connexion_bdd.cursor() \n",
-    "\n",
     "\n",
     "# Fermer la connexion \n",
     "connexion_bdd.close\n",
@@ -319,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,13 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Entrez un code de département (fin pour terminer):42\n",
+      "Entrez le nom du département:Loire\n",
+      "Une ligne à été ajoutée dans la table\n",
+      "\n",
+      "Entrez un code de département (fin pour terminer):43\n",
+      "Entrez le nom du département:Haute-Loire\n",
+      "Une ligne à été ajoutée dans la table\n",
+      "\n",
       "Entrez un code de département (fin pour terminer):fin\n",
       "\n"
      ]
@@ -426,13 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "('43', 'Haute-Loire') <class 'tuple'>\n",
       "\n"
      ]
     }
@@ -452,7 +464,7 @@
     "resultat = curseur.execute(requete) \n",
     "\n",
     "for enregistrement in resultat:\n",
-    "  print(enregistrement)\n",
+    "    print(enregistrement, type(enregistrement) )\n",
     "\n",
     "# Enregistrer definitivement les données\n",
     "connexion_bdd.commit() \n",
@@ -475,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +534,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insérer les données du fichier departement.csv\n"
+    "# Insérer les données du fichier departement.csv\n",
+    "# Ouverture de la BDD\n",
+    "# Ouvrir le fichier CSV\n",
+    "# initialise le lecteur de CSV (les parametres)\n",
+    "# Faire la boucle pour lire les lignes du fichier CSV\n",
+    "# construire la requete SQL (INSERT) (y inserer les données lues dans le CSV)\n",
+    "# executer la requete SQL\n",
+    "# faire un COMMIT pour enregistrer les informations dans la table\n",
+    "# fermeture de la BDD\n"
    ]
   },
   {
@@ -560,10 +580,11 @@
     "    \n",
     "    nombre_lignes = 0\n",
     "    for ligne in lecteur_csv:\n",
+    "        code_departement = ligne[1]\n",
+    "        nom_departement =  ligne[2]\n",
     "        \n",
-    "        departement = ligne[1]\n",
-    "        if departement[0:2] == \"97\":\n",
-    "          print(ligne[1],ligne[2])\n",
+    "        if code_departement[0:2] == \"97\":\n",
+    "            print( code_departement, nom_departement )\n",
     "        \n",
     "        nombre_lignes += 1\n",
     "        \n",
