--- a/csv_sql.ipynb
+++ b/csv_sql.ipynb
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercice : \n",
+    "### 1.2 Exercice : \n",
     "Lire le fichier departement.csv et n'afficher que les DOM/TOM."
    ]
   },
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 écriture dans un fichier CSV"
+    "### 1.3 écriture dans un fichier CSV"
    ]
   },
   {
@@ -258,6 +258,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exercice 1.4 : Géolocalisation adresse IP\n",
+    "\n",
+    "vous disposez du fichier geoip.csv contenant la géolocalisation en fonction de l'adresse IP (description ci-dessous). \n",
+    "Retrouver le pays correspondant à l'adresse IP renseignée.\n",
+    "\n",
+    "\n",
+    "#### Champs du fichier de données CSV\n",
+    "\n",
+    "```\n",
+    "Name \t        Type \tDescription\n",
+    "ip_from \t    INT (10) \t    First IP address show netblock.\n",
+    "ip_to \t        INT (10) \t    Last IP address show netblock.\n",
+    "country_code \tCHAR(2) \t    Two-character country code based on ISO 3166.\n",
+    "country_name \tVARCHAR(64) \tCountry name based on ISO 3166.\n",
+    "region_name \tVARCHAR(128) \tRegion or state name.\n",
+    "city_name \t    VARCHAR(128) \tCity name.\n",
+    "latitude \t    DOUBLE \t        City latitude. Default to capital city latitude if city is unknown.\n",
+    "longitude \t    DOUBLE \t        City longitude. Default to capital city longitude if city is unknown.\n",
+    "\n",
+    "une adresse sous la forme ip0.ip1.ip2.ip3 est convertie sous la forme d'un int en appliquant le calcul suivant :\n",
+    "ip = ip3 + ip2 * 256 + ip1 * 256 * 256 + ip0 * 256 * 256 * 256\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP decimal 632109567\n",
+      "632109312 632109567 FR France Provence-Alpes-Cote-d'Azur Antonaves\n",
+      "\n",
+      "Nombre de lignes lues dans le fichier: 284255\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "#ip = [ 193, 57, 120, 7 ] # adresse IP = 193.57.120.7\n",
+    "\n",
+    "ip = [37, 173, 57, 255 ]\n",
+    "\n",
+    "# Format de l'adresse IP dans le fichier CSV\n",
+    "ip_decimal = ip[0] * pow(256,3) + ip[1] * pow(256,2) + ip[2] * 256 + ip[3]\n",
+    "\n",
+    "print(\"IP decimal\", ip_decimal)\n",
+    "\n",
+    "# ouverture du fichier\n",
+    "with open('geoip.csv', encoding=\"utf8\") as fichier_csv:\n",
+    "    lecteur_csv = csv.reader(fichier_csv, delimiter=',')\n",
+    "    \n",
+    "    nombre_lignes = 0\n",
+    "    # Lire les lignes du fichier une par une\n",
+    "        \n",
+    "    for ligne in lecteur_csv:\n",
+    "        #print(ligne, type(ligne) )\n",
+    "        #print(ligne[0], type(ligne[0]))\n",
+    "        \n",
+    "        # Les champs sont lus dans une liste\n",
+    "        if ( ip_decimal >= int(ligne[0]) and ip_decimal <= int(ligne[1]) ):\n",
+    "            print(ligne[0],ligne[1],ligne[2],ligne[3],ligne[4],ligne[5])\n",
+    "            break\n",
+    "        \n",
+    "        nombre_lignes += 1\n",
+    "        \n",
+    "    print('\\nNombre de lignes lues dans le fichier: {}'.format(nombre_lignes))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 - Les bases de données SQL\n",
     "Pour simplifier la configuration nous allons utiliser la base de données SQLlite qui est directement intégrée dans Python et ne demande pas l'instalation d'un serveur de base de données. Le fonctionnement est le même avec une autre base de données. Il existe d'autres types de bases de données: MySQL, PostgresQL, Microsoft SQL Server, Oracle, access... Le langage SQL dispose de plusieurs variantes qui diffèrent principalement par les options disponibles.\n",
     "\n",
@@ -280,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -359,6 +437,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table departement crée.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# effacement de la table departement\n",
+    "import sqlite3 \n",
+    "\n",
+    "# connexion à la base de données\n",
+    "connexion_bdd = sqlite3.connect('mabasededonnees.db')\n",
+    "curseur = connexion_bdd.cursor() \n",
+    "\n",
+    "# Création de la requete SQL\n",
+    "requete = \"DROP TABLE departement\" \n",
+    "\n",
+    "# Exécution de la requete \n",
+    "curseur.execute(requete) \n",
+    "\n",
+    "# Enregistrer definitivement les données\n",
+    "connexion_bdd.commit() \n",
+    "\n",
+    "# Fermer la connexion \n",
+    "connexion_bdd.close\n",
+    "print(\"Table departement effacée.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +496,12 @@
       "Entrez le nom du département:Loire\n",
       "Une ligne à été ajoutée dans la table\n",
       "\n",
-      "Entrez un code de département (fin pour terminer):43\n",
-      "Entrez le nom du département:Haute-Loire\n",
+      "Entrez un code de département (fin pour terminer):56\n",
+      "Entrez le nom du département:Morbihan\n",
+      "Une ligne à été ajoutée dans la table\n",
+      "\n",
+      "Entrez un code de département (fin pour terminer):91\n",
+      "Entrez le nom du département:Essonne\n",
       "Une ligne à été ajoutée dans la table\n",
       "\n",
       "Entrez un code de département (fin pour terminer):fin\n",
@@ -437,14 +554,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('43', 'Haute-Loire') <class 'tuple'>\n",
+      "('42', 'Loire') <class 'tuple'>\n",
+      "('56', 'Morbihan') <class 'tuple'>\n",
+      "('91', 'Essonne') <class 'tuple'>\n",
       "\n"
      ]
     }
@@ -524,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 Exercice\n",
+    "### 2.6 Exercice: departement.csv\n",
     "Lire les données du fichier departement.csv et ajouter les enregistrements dans la table département"
    ]
   },
@@ -543,6 +662,171 @@
     "# executer la requete SQL\n",
     "# faire un COMMIT pour enregistrer les informations dans la table\n",
     "# fermeture de la BDD\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7 Exercice: geoip.csv\n",
+    "\n",
+    "Lire les données du fichier geoip.csv et ajouter les enregistrements dans la table geoip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table geoip crée.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creation de la table geoip (vide)\n",
+    "import sqlite3 \n",
+    "\n",
+    "# connexion à la base de données\n",
+    "connexion_bdd = sqlite3.connect('mabasededonnees.db')\n",
+    "curseur = connexion_bdd.cursor() \n",
+    "\n",
+    "# Création de la requete SQL\n",
+    "requete = \"CREATE TABLE geoip ( \\\n",
+    "  ip_debut DECIMAL(10) NOT NULL, \\\n",
+    "  ip_fin DECIMAL(10) NOT NULL, \\\n",
+    "  pays_code varchar(2) NOT NULL, \\\n",
+    "  pays varchar(50) NOT NULL \\\n",
+    ")\" \n",
+    "\n",
+    "# Exécution de la requete \n",
+    "curseur.execute(requete) \n",
+    "\n",
+    "# Enregistrer definitivement les données\n",
+    "connexion_bdd.commit() \n",
+    "\n",
+    "# Fermer la connexion \n",
+    "connexion_bdd.close\n",
+    "print(\"Table geoip crée.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nombre de lignes lues dans le fichier: 2969680\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import sqlite3 \n",
+    "\n",
+    "# connexion à la base de données\n",
+    "connexion_bdd = sqlite3.connect('mabasededonnees.db')\n",
+    "curseur = connexion_bdd.cursor() \n",
+    "\n",
+    "# ouverture du fichier\n",
+    "with open('geoip.csv', encoding=\"utf8\") as fichier_csv:\n",
+    "    lecteur_csv = csv.reader(fichier_csv, delimiter=',')\n",
+    "    \n",
+    "    nombre_lignes = 0\n",
+    "    # Lire les lignes du fichier une par une\n",
+    "        \n",
+    "    for ligne in lecteur_csv:\n",
+    "        #print(ligne, type(ligne) )\n",
+    "        \n",
+    "        # Les champs sont lus dans une liste\n",
+    "        #print(ligne[0], type(ligne[0]))\n",
+    "        #print(ligne[0],ligne[1],ligne[2],ligne[3])\n",
+    "        requete = ' INSERT INTO geoip (ip_debut,ip_fin,pays_code,pays) \\\n",
+    "                    VALUES ({}, {}, \"{}\", \"{}\" ) '. format( ligne[0],ligne[1],ligne[2],ligne[3] )\n",
+    "\n",
+    "        \n",
+    "        # Exécution de la requete \n",
+    "        curseur.execute(requete) \n",
+    "               \n",
+    "        nombre_lignes += 1\n",
+    "\n",
+    "        if nombre_lignes % 100 == 0:\n",
+    "            connexion_bdd.commit() \n",
+    "\n",
+    "# Fermer la connexion \n",
+    "connexion_bdd.commit() \n",
+    "connexion_bdd.close\n",
+    "print('\\nNombre de lignes lues dans le fichier: {}'.format(nombre_lignes))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP decimal 632109567\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conversion d'une adresse IP en valeur décimale\n",
+    "\n",
+    "# adresse IP = 193.57.120.7\n",
+    "ip = [37, 173, 57, 255 ]\n",
+    "# Format de l'adresse IP dans le fichier CSV\n",
+    "ip_decimal = ip[0] * pow(256,3) + ip[1] * pow(256,2) + ip[2] * 256 + ip[3]\n",
+    "\n",
+    "print(\"IP decimal\", ip_decimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(632109312, 632109567, 'FR', 'France') <class 'tuple'>\n",
+      "Fini\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Effacer un enregistrement\n",
+    "import sqlite3 \n",
+    "\n",
+    "# connexion à la base de données\n",
+    "connexion_bdd = sqlite3.connect('mabasededonnees.db')\n",
+    "curseur = connexion_bdd.cursor() \n",
+    "\n",
+    "# Création de la requete SQL\n",
+    "requete = \"SELECT * FROM geoip WHERE ip_debut <= 632109567 AND ip_fin >= 632109567 \"\n",
+    "\n",
+    "# Exécution de la requete \n",
+    "resultat = curseur.execute(requete) \n",
+    "\n",
+    "for enregistrement in resultat:\n",
+    "    print(enregistrement, type(enregistrement) )\n",
+    "    \n",
+    "# Enregistrer definitivement les données\n",
+    "connexion_bdd.commit() \n",
+    "\n",
+    "# Fermer la connexion \n",
+    "connexion_bdd.close\n",
+    "print(\"Fini\")"
    ]
   },
   {
@@ -662,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
