--- a/intro-python-part1.ipynb
+++ b/intro-python-part1.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction au langage Python\n",
+    "# Introduction au langage Python (partie 1)\n",
     "\n",
     "## Introduction\n",
+    "\n",
+    "Le langage Python peut-être installé à partir de nombreuses distributions.\n",
+    "Liste de distributions python libres: <https://wiki.python.org/moin/PythonDistributions>\n",
     "\n",
     "### Distribution python utilisée dans ce document\n",
     "\n",
     "La distribution python utilisée dans ce document: <https://www.anaconda.com/products/individual>\n",
     "\n",
-    "Il existe de nombreuses autres distributions python libres: <https://wiki.python.org/moin/PythonDistributions>\n",
+    "\n",
     "\n",
     "### Documentation python / liens utiles\n",
     "\n",
@@ -91,6 +94,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keyword\n",
+    "\n",
+    "print(keyword.kwlist)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +129,7 @@
     "Parametres par defaut de l'imprimante 3D\n",
     "configuration specifique dans config.json\n",
     "'''\n",
+    "\n",
     "# Decalage de la table\n",
     "offset_x = 12 # decalage x standard\n",
     "offset_y = 8 # decalage y standard"
@@ -123,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +354,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Attention: Les nombres flottants sont des approximations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la variable c est égale à 0.30000000000000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0.1\n",
+    "b = 0.2\n",
+    "c = a + b\n",
+    "\n",
+    "if c == 0.3:\n",
+    "    print(\"la variable c est égale à 0.3\")\n",
+    "else:\n",
+    "    print(\"la variable c est égale à\", c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Les nombres complexes (complex)\n"
    ]
   },
@@ -369,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +551,7 @@
     {
      "data": {
       "text/plain": [
-       "'H'"
+       "'e'"
       ]
      },
      "execution_count": 20,
@@ -506,7 +560,28 @@
     }
    ],
    "source": [
-    "s[0] # premier élément"
+    "s = \"Hello world!\"\n",
+    "s[1] # premier élément"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[-2] # dernier élément"
    ]
   },
   {
@@ -517,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "'!'"
+       "'ello'"
       ]
      },
      "execution_count": 21,
@@ -526,32 +601,13 @@
     }
    ],
    "source": [
-    "s[-1] # dernier élément"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ello'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "s = \"Hello world!\"\n",
     "s[1:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +634,7 @@
        "'Hello'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,27 +645,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'world!'"
+       "'worl'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[6:] # de l'entrée d'indice 6 à la fin"
+    "s[6:-2] # de l'entrée d'indice 6 à la fin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +674,7 @@
        "'el ol!'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,6 +708,24 @@
    "metadata": {},
    "source": [
     "Exemple : A partir des lettres de l'alphabet, générer par une opération de slicing la chaîne de caractères \"cfilorux\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCDEFGHIJKLMNOPQRSTUVWXYZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "print( string.ascii_uppercase)"
    ]
   },
   {
@@ -761,72 +835,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les opérateurs\n",
-    "\n",
-    "### Les opérateurs arithmétiques\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1024"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 + 2, 1 - 2, 1 * 2, 1 / 2 # + - / * sur des entiers\n",
-    "1.0 + 2.0, 1.0 - 2.0, 1.0 * 2.0, 1.0 / 2.0 # + - / * sur des flottants\n",
-    "3.0 // 2. # Division entière\n",
-    "2 ** 10 # exposant. attention pas ^"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.6666666666666667"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5 / 3 # division"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5 // 3 # division entière"
+    "#### Mise en forme de chaînes de caractères avec les f-strings, formatted string literals"
    ]
   },
   {
@@ -835,62 +844,225 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le nomre d'or est 1.618\n"
+     ]
     }
    ],
    "source": [
-    "5 % 3 # reste de la division (modulo)"
+    "phi = 1.618\n",
+    "print( f\"le nomre d'or est {phi}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5\n",
-      "21.0\n",
-      "<class 'float'>\n"
+      "Hello, ERIC. Ton age est 74 ans.\n"
      ]
     }
    ],
    "source": [
-    "a = 2\n",
-    "print( 3 / float(a) ) # OK\n",
-    "print(7 * 3.0) # int x float -> float\n",
-    "print(type(7 * 3.0))"
+    "nom = \"Eric\"\n",
+    "age = 74\n",
+    "print( f\"Hello, {nom.upper()}. Ton age est {age} ans.\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.6\n"
+      "Joyeux noel\n"
      ]
     }
    ],
    "source": [
+    "# Palindrome\n",
+    "fete = \"leon\"\n",
+    "print(f\"Joyeux {fete[::-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phrase chiffrée : dohd mdfwd hvw\n",
+      "Phrase déchiffrée : alea jacta est\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Le chiffre cesar\n",
+    "\n",
+    "import string\n",
+    "\n",
+    "# Chiffrer une chaine de caracteres\n",
+    "def cesar( chaine ):\n",
+    "    alphabet = string.ascii_lowercase\n",
+    "    \n",
+    "    chaine_chiffree = \"\"    \n",
+    "    for caractere in chaine.lower():\n",
+    "        caractere_ordre = ord(caractere) - ord('a')\n",
+    "        if caractere_ordre >= 0 and caractere_ordre <= 25:\n",
+    "            chaine_chiffree += alphabet[ (caractere_ordre + 3) % 26 ] # Si c'est un caractere [a,z], le chiffrer\n",
+    "        else:\n",
+    "            chaine_chiffree += caractere # Sinon ne pas le modifier\n",
+    "        \n",
+    "    return( chaine_chiffree )\n",
+    "\n",
+    "# Dechiffrer une chaine de caracteres\n",
+    "def cesar_decode( chaine ):\n",
+    "    alphabet = string.ascii_lowercase\n",
+    "    \n",
+    "    chaine_dechiffree = \"\"    \n",
+    "    for caractere in chaine.lower():\n",
+    "        caractere_ordre = ord(caractere) - ord('a')\n",
+    "        if caractere_ordre >= 0 and caractere_ordre <= 25:\n",
+    "            chaine_dechiffree += alphabet[ (caractere_ordre - 3) % 26 ]  # Si c'est un caractere [a,z], le dechiffrer\n",
+    "        else:\n",
+    "            chaine_dechiffree += caractere # Sinon ne pas le modifier\n",
+    "        \n",
+    "    return( chaine_dechiffree )\n",
+    "\n",
+    "rubicon = \"Alea jacta est\"\n",
+    "\n",
+    "print( f\"Phrase chiffrée : {cesar(rubicon)}\" )\n",
+    "print( f\"Phrase déchiffrée : {cesar_decode( cesar(rubicon) )}\" )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les opérateurs\n",
+    "\n",
+    "### Les opérateurs arithmétiques\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombres entiers 3 -1 2 0.5\n",
+      "nombres flottants 3.0 -1.0 2.0 0.5\n",
+      "Division entiere 3.0\n",
+      "exposant 1024\n",
+      "modulo 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Les quatres opérations + - * /\n",
+    "# Sur des nombres entiers\n",
+    "print(\"nombres entiers\", 1 + 2, 1 - 2, 1 * 2, 1 / 2)\n",
+    "\n",
+    "# Sur des nombres flottants\n",
+    "print(\"nombres flottants\", 1.0 + 2.0, 1.0 - 2.0, 1.0 * 2.0, 1.0 / 2.0)\n",
+    "\n",
+    "# Division entière\n",
+    "print(\"Division entiere\", 7.4 // 2)\n",
+    "\n",
+    "# exposant. attention pas ^\n",
+    "print(\"exposant\", 2 ** 10)\n",
+    "\n",
+    "# reste de la division (modulo)\n",
+    "print(\"modulo\", 5 % 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attention aux conversions de types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 5 de type <class 'int'>\n",
+      "b = 3 de type <class 'int'>\n",
+      "f = 1.6666666666666667 de type <class 'float'>\n",
+      "a = 8 de type <class 'int'>\n",
+      "b = 4 de type <class 'int'>\n",
+      "f = 2.0 de type <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attention la division change le type\n",
+    "a = 5\n",
+    "b = 3\n",
+    "f = a / b\n",
+    "print(\"a =\", a, \"de type\", type(a))\n",
+    "print(\"b =\", b, \"de type\", type(b))\n",
+    "\n",
+    "print(\"f =\", f, \"de type\", type(f))\n",
+    "\n",
+    "# Attention la division change le type\n",
+    "a = 8\n",
+    "b = 4\n",
+    "f = a / b\n",
+    "print(\"a =\", a, \"de type\", type(a))\n",
+    "print(\"b =\", b, \"de type\", type(b))\n",
+    "\n",
+    "print(\"f =\", f, \"de type\", type(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valeur calculee 18.336\n",
+      "valeur arrondie 18.34\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
     "# exemple calcul TTC\n",
-    "ht = 15.5\n",
+    "ht = 15.28\n",
     "tva = 20\n",
     "ttc = ht * (1 + tva / 100 )\n",
-    "ttc = round( ttc, 2 )\n",
-    "print(ttc)"
+    "print(\"valeur calculee\", ttc)\n",
+    "\n",
+    "# Arrondir au centime supérieur\n",
+    "ttc = (math.floor(ttc * 100) + 1) / 100\n",
+    "\n",
+    "print(\"valeur arrondie\", ttc)"
    ]
   },
   {
@@ -902,23 +1074,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abcdefghi\n",
-      "AhAhAh\n"
+      "Concaténation abcdefghi\n",
+      "réplication AhAhAh\n"
      ]
     }
    ],
    "source": [
     "s = \"abc\" + \"def\" + \"ghi\"\n",
-    "print( s )\n",
+    "print( \"Concaténation\", s )\n",
+    "\n",
     "s = \"Ah\" * 3\n",
-    "print( s )"
+    "print( \"réplication\", s )"
    ]
   },
   {
@@ -947,6 +1120,7 @@
     }
    ],
    "source": [
+    "# réponse de normand\n",
     "True and False"
    ]
   },
@@ -967,6 +1141,7 @@
     }
    ],
    "source": [
+    "# C'est pas faux\n",
     "not False"
    ]
   },
@@ -984,68 +1159,53 @@
     }
    ],
    "source": [
+    "# Hamlet\n",
     "to_be = True\n",
     "print( to_be or not to_be )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion booléen en entier:\n",
+      "True =  1\n",
+      "False =  0\n"
+     ]
     }
    ],
    "source": [
-    "int(True)"
+    "print(\"Conversion booléen en entier:\")\n",
+    "print(\"True = \", int(True))\n",
+    "print(\"False = \", int(False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 == True\n",
+      "0 == False\n"
+     ]
     }
    ],
    "source": [
-    "int(False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 == True"
+    "# Meme sans conversion, ils sont égaux\n",
+    "if 1 == True:\n",
+    "    print(\"1 == True\")\n",
+    "if 0 == False:\n",
+    "    print(\"0 == False\")\n",
+    "    "
    ]
   },
   {
@@ -1059,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1068,18 +1228,19 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 < 4 # bool"
+    "# le résultat d'une comparaison est un booleen\n",
+    "3 < 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1249,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1108,33 +1269,31 @@
        "False"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 < 2"
+    "3 < 2 < 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "<class 'bool'>\n"
+      "False <class 'bool'>\n"
      ]
     }
    ],
    "source": [
     "test = (3 > 4)\n",
-    "print(test)\n",
-    "print(type(test))"
+    "print(test, type(test))"
    ]
   },
   {
@@ -1215,6 +1374,35 @@
    ],
    "source": [
     "not 2 == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attention aux comparaisons de chaines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 est plus grand que 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"20\"\n",
+    "s2 = \"100\"\n",
+    "if s1 > s2 :\n",
+    "    print(s1, \"est plus grand que\", s2)\n",
+    "else:\n",
+    "    print(s2, \"est plus grand que\", s1)"
    ]
   },
   {
@@ -1309,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1538,7 @@
    ],
    "source": [
     "import math\n",
-    "print( dir(math))"
+    "print( dir(math) )"
    ]
   },
   {
@@ -1756,7 +1944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
